--- a/ProgMov/app/src/main/res/values/styles.xml
+++ b/ProgMov/app/src/main/res/values/styles.xml
@@ -4,8 +4,9 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">250dp</item>
         <item name="android:background">@drawable/container_components</item>
-        <item name="android:layout_margin">20dp</item>
-        <item name="android:layout_marginTop">50dp</item>
+        <item name="android:layout_marginLeft">20dp</item>
+        <item name="android:layout_marginRight">20dp</item>
+        <item name="android:layout_marginTop">100dp</item>
 
     </style>
 
